[package]
name = "horror_game"
version = "0.1.0"
authors = ["Ryan Cirincione <ryancirincione@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.2.7"
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver" }
